--- a/src/App.css
+++ b/src/App.css
@@ -171,3 +171,22 @@ html {
       padding: 1em;
   }
 }
+
+.react-tel-input .form-control {
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+	height: 5.5rem !important;
+	position: relative;
+	letter-spacing: .01rem;
+	border-radius: 0 !important;
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+	width: 100% !important;
+	font-size: 0.9rem !important;
+}
+.PhoneInputInput {
+  flex: 1 1;
+  min-width: 0;
+  height: 55px;
+  border: 1px solid #ccc;
+}
