--- a/src/Pages/Hire/style.css
+++ b/src/Pages/Hire/style.css
@@ -487,8 +487,8 @@
   .GWGSk:active,
   .GWGSk.active {
     color: #ffffff;
-    background-color: #3c65fe;
-    border: 1px solid #3c65fe;
+    background-color: #D4305F;
+    border: 1px solid #D4305F;
   } /*!sc*/
   data-styled.g1432[id="styles__ExpertiseBadge-sc-s0b09o-12"] {
     content: "GWGSk,";
